--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <div class="about__box">
                                 <i class='bx bx-time about__icon' ></i>
                                 <h3 class="about__title">ages</h3>
-                                <span class="about__subtitle">between(17-23)/span>
+                                <span class="about__subtitle">(17-23)</span>
                             </div>
 
                             <div class="about__box">
