--- a/index.html
+++ b/index.html
@@ -30,14 +30,7 @@
             <li><a href="#proplem">proplem</a></li>
             <li><a href="#Team">Team Members</a></li>
             <li><a href="#contact">Contact</a></li>
-            <!-- <li>
-                <ul>
-            <a href="" target="blank"><li class="sh-me"><i class="fa-brands fa-facebook"></i></li></a>
-            <a href="" target="blank"><li class="sh-me"><i class="fa-brands fa-twitter"></i></li></a>
-            <a href="" target="blank"><li class="sh-me"><i class="fa-brands fa-linkedin"></i></li></a>
-            <a href="" target="blank"><li class="sh-me"><i class="fa-brands fa-github"></i></li></a>
-            </ul>
-        </li> -->
+
         </ul>
 
                 <div class="nav__menu">
@@ -93,21 +86,6 @@
                         </div>
                     </div>
 
-
-                    <div class="home__social">
-                        <a href="" target="_blank" class="home__social-link">
-                            <i class='bx bxl-linkedin' ></i>
-                        </a>
-
-                        <a href="mailto:" target="_blank" class="home__social-link">
-                            <i class='bx bx-mail-send'></i>
-                        </a>
-
-                        <a href="" target="_blank" class="home__social-link">
-                            <i class='bx bxl-instagram'></i>
-                        </a>
-                    </div>
-
                     <a href="#about" class="home__scroll">
                         <i class='bx bx-mouse home__scroll-icon'></i>
                         <span class="home__scroll-name">Scroll Down</span>
@@ -147,14 +125,14 @@
                         <p class="about__description">
                         We are <span style="color:red ; font-weight: 700;">GOCG</span> have endeavored to discover a solution to environmental problems in the hope that we will improve the environment in which we live in order to create a society with a better environment.
                         </p>
-                        <a href="#contact" class="button">contact Me</a>
+                    
                     </div>
                 </div>
             </section>
 
             <!--=============== proplem ===============-->
             <section class="proplem section" id="proplem">
-                <h2 class="section__title">Problem(one)</h2>
+                <h2 class="section__title">What We Did</h2>
 
                 <div class="proplem__container container grid">
                     <div class="proplem__content">
@@ -274,72 +252,6 @@ A NASA-supported study also reported that radiation could damage the brain of as
                 </div>
             </section>
 
-            <!--=============== CONTACT ===============-->
-            <section class="contact section" id="contact">
-                <span class="section__subtitle">Get in touch</span>
-                <h2 class="section__title">Contact Me</h2>
-
-                <div class="contact__container container grid">
-                    <div class="contact__content">
-                        <h3 class="contact__title">Talk to me</h3>
-
-                        <div class="contact__info">
-                            <div class="contact__card">
-                                <i class='bx bx-mail-send contact__card-icon'></i>
-                                <h3 class="contact__card-title">Email</h3>
-                                <span class="contact__card-data">test.test@test.com</span>
-
-                                <a href="mailto:test.test@test.com" target="_blank" class="contact__button">
-                                    Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
-                                </a>
-                            </div>
-
-                            <div class="contact__card">
-                                <i class='bx bxl-messenger contact__card-icon'></i>
-                                <h3 class="contact__card-title">Messenger</h3>
-                                <span class="contact__card-data">AmrAljohary</span>
-
-                                <a href="" target="_blank" class="contact__button">
-                                    Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
-                                </a>
-                            </div>
-
-                            <div class="contact__card">
-                                <i class='bx bxl-whatsapp contact__card-icon' ></i>
-                                <h3 class="contact__card-title">WatsApp</h3>
-                                <span class="contact__card-data"></span>
-
-                                <a href="" target="_blank" class="contact__button">
-                                    Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="contact__content">
-                        <h3 class="contact__title">Write me your messege</h3>
-
-                        <form action="" class="contact__form">
-                            <div class="contact__form-div">
-                                <label for="" class="contact__form-tag">Name</label>
-                                <input type="text" placeholder="Insert your name" class="contact__form-input">
-                            </div>
-
-                            <div class="contact__form-div">
-                                <label for="" class="contact__form-tag">Mail</label>
-                                <input type="email" placeholder="Insert your name email" class="contact__form-input">
-                            </div>
-
-                            <div class="contact__form-div contact__form-area">
-                                <label for="" class="contact__form-tag">Messege</label>
-                                <textarea name="" id="" cols="30" rows="10" placeholder="Write your offer"  class="contact__form-input"></textarea>
-                            </div>
-
-                            <button class="button">Send Message</button>
-                        </form>
-                    </div>
-                </div>
-            </section>
         </main>
 
         <!--=============== FOOTER ===============-->
@@ -361,22 +273,8 @@ A NASA-supported study also reported that radiation could damage the brain of as
                     </li>
                 </ul>
 
-                <ul class="footer__social">
-                    <a href="" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-facebook'></i>
-                    </a>
-
-                    <a href="" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-instagram'></i>
-                    </a>
-
-                    <a href="" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-twitter' ></i>
-                    </a>
-                </ul>
-
                 <span class="footer__copy">
-                    &#169; AmrAljohary All rigths reserved, (Egypt)
+                    &#169; GOCG All rigths reserved, (Egypt)
                 </span>
             </div>
         </footer>
